--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-router": "https://esm.sh/react-router@^7.11.0",
+    "xlsx": "https://esm.sh/xlsx@0.18.5"
   }
 }
 </script>
